# MouthwashPrivate

./: .dockerignore  .gitignore  Dockerfile.Accounts  Dockerfile.Master  Dockerfile.Node  README.md  accounts.compose.yml  compose.yml  config.master.json  config.node.json  db.compose.yml  ecosystem.config.js  master.compose.yml  package.json
Hindenburg/: .gitignore  README.md  config.json  config.schema.json  package.json
Launcher/: .env  .gitignore  index.html  package.json  svelte.config.js  vite.config.ts
Launcher/src-tauri/: Cargo.toml  tauri.conf.json
Launcher/src-tauri/src/: main.rs
SkeldJS/: README.md  README.md.orig  package.json  package.json.orig  package.json.rej
account-server/: .dockerignore  Dockerfile  package.json  schema.sql  tsconfig.json
assets/: index.js  package.json
docs/: INSTALLATION.md
hbplugin-mouthwashgg/: package.json
hbplugin-mouthwashgg-anti-cheat/: README.md  index.ts  package.json
hbplugin-mouthwashgg-api/: package.json
hbplugin-mouthwashgg-auth/: .gitignore  package.json
hbplugin-mouthwashgg-master/: README.md  config.schema.json  index.ts  package.json
hbplugin-mouthwashgg-metrics/: README.md  config.schema.json  index.ts  package.json
hbplugin-mwgg-gamemode-hns/: .gitignore  index.ts  package.json
hbplugin-mwgg-gamemode-infection/: index.ts  package.json
hbplugin-mwgg-gamemode-town-of-polus/: package.json
hbplugin-mwgg-gamemode-vanilla/: index.ts  package.json
hbplugin-mwgg-map-submerged/: index.ts  package.json
hbplugin-mwgg-map-submerged-register/: README.md  index.ts  package.json  tsconfig.json
mediator/: MediatorServer.ts  MediatorServerConfig.ts  README.md  Transaction.ts  package.json
misc/: db.sql  init.sh  launch-account.sh  launch-db.sh  launch-master.sh  launch-node.sh  schema.sql  setup-account.sh  setup-db.sh  setup-master.sh  setup-node.sh
mod-bepinex-client/: AmongUsPath.props  (+4 more)
(+506 files in other folders)
