[package]
name = "mouthwash-launcher"
version = "0.0.2"
description = "PGG Rewritten Launcher"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "updater", "shell-sidecar", "fs-read-file", "fs-write-file", "shell-execute", "path-all", "shell-open", "fs-create-dir", "dialog-open", "fs-read-dir", "fs-remove-dir", "fs-rename-file", "fs-exists"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.50"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
zip = "0.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
